<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_marginStart="20dp"
        app:civ_border_color="@color/cardview_dark_background"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_repository"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_Username" />

    <TextView
        android:id="@+id/txt_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/name_user"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_Username"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toBottomOf="@+id/txt_Username" />

    <TextView
        android:id="@+id/follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/followers"
        app:layout_constraintStart_toEndOf="@+id/txt_follower"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@id/follower"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/follower"
        app:layout_constraintStart_toEndOf="@+id/repository"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@id/txt_follower"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/repositories"
        app:layout_constraintStart_toEndOf="@+id/txt_repository"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <TextView
        android:id="@+id/txt_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/repository"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/repository"
        app:layout_constraintStart_toEndOf="@+id/img_photo"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

</androidx.constraintlayout.widget.ConstraintLayout>